fix search bar image distortion

--- a/static/css/components/header-bar.less
+++ b/static/css/components/header-bar.less
@@ -522,6 +522,7 @@
               min-height: 60px;
               background-color: @lightest-grey;
               margin-right: 10px;
+              object-fit: cover;
             }
 
             .book-desc {
